--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@
 file(GLOB_RECURSE ALL_TEST_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 add_executable(tests ${ALL_TEST_FILES})
-target_link_libraries(tests PUBLIC Threads::Threads OpenSSL::Crypto OpenSSL::SSL Boost::headers rt)
-target_compile_definitions(tests PUBLIC BOOST_REQUESTS_SEPARATE_COMPILATION=1)
+target_link_libraries(tests PUBLIC Threads::Threads OpenSSL::Crypto OpenSSL::SSL Boost::headers Boost::container rt)
+target_compile_definitions(tests PUBLIC BOOST_REQUESTS_SEPARATE_COMPILATION=1 BOOST_REQUESTS_USE_STD_FS=1)
