--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ find_package(Threads REQUIRED)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
+
 include_directories(include libs/url/include)
 
 add_subdirectory(test)
