--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -4,7 +4,16 @@ file(GLOB_RECURSE ALL_EXAMPLES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURR
 
 add_library(boost_requests_example_impl impl.cpp)
 target_compile_definitions(boost_requests_example_impl PUBLIC BOOST_REQUESTS_SEPARATE_COMPILATION=1 BOOST_REQUESTS_USE_STD_FS=1 BOOST_BEAST_SEPARATE_COMPILATION=1 BOOST_ASIO_SEPARATE_COMPILATION=1)
-target_link_libraries(boost_requests_example_impl  PUBLIC Threads::Threads OpenSSL::Crypto OpenSSL::SSL Boost::headers Boost::container rt)
+target_link_libraries(boost_requests_example_impl  PUBLIC Threads::Threads OpenSSL::Crypto OpenSSL::SSL Boost::headers Boost::container rt pugixml::static)
+
+
+include(FetchContent)
+FetchContent_Declare(
+    pugixml
+    GIT_REPOSITORY https://github.com/zeux/pugixml.git
+    GIT_TAG        master)
+
+FetchContent_MakeAvailable(pugixml)
 
 foreach(SRC ${ALL_EXAMPLES})
     if (SRC STREQUAL "impl.cpp")
