--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
 project(requests)
 
-find_package(Boost REQUIRED system container)
+find_package(Boost REQUIRED system container filesystem atomic)
 find_package(OpenSSL REQUIRED)
 find_package(Threads REQUIRED)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 
 add_compile_options(-fsanitize=address)
 add_link_options(-fsanitize=address)
