Added openssl install for osx.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,23 @@ if (NOT BOOST_REQUESTS_BUILD_INLINE)
     include_directories(include)
 endif()
 
+
+#-------------------------------------------------------------------------------
+#
+# OpenSSL
+#
+#-------------------------------------------------------------------------------
+
+
+if (APPLE AND NOT DEFINED ENV{OPENSSL_ROOT_DIR})
+    find_program(HOMEBREW brew)
+    if (NOT HOMEBREW STREQUAL "HOMEBREW-NOTFOUND")
+        execute_process(COMMAND brew --prefix openssl
+                OUTPUT_VARIABLE OPENSSL_ROOT_DIR
+                OUTPUT_STRIP_TRAILING_WHITESPACE)
+    endif()
+endif()
+
 find_package(OpenSSL)
 if (NOT MSVC)
     link_libraries(${OPENSSL_LIBRARIES})
